# macvi

./: .gitignore  CMakeLists.txt  README.md  a.out  d3d9_offsets.c  dump.txt  fix_d3d9.py  fix_d3d9_create.py  fix_main_runloop.py  print_indices.c  print_indices2.c  scratch_patch.m  test.asm  test_addr  test_addr.c  test_app  test_app.m  test_mmap  test_mmap.c  test_offset.cpp  test_perf.c  test_pie  test_vtable.c
FEX/: CMakeLists.txt  PROGRESS.md  Readme.md  commpage_dump.h  dispatcher_disasm.txt  registry.txt
FEX/CodeEmitter/CodeEmitter/: Buffer.h
FEX/CompetitorAnalysis/: .KnbQKwsm_maBAA  app_initialized  install_info.json
FEX/CompetitorAnalysis/downloads/: queue-v1.json
FEX/CompetitorAnalysis/epic-core/: assets.json  sessions.json
FEX/CompetitorAnalysis/epic-core/derived/: size_estimates.json
FEX/CompetitorAnalysis/epic-core/manifests/: index.json
FEX/CompetitorAnalysis/epic-core/metadata/: Batfish.json  BatfishS2.json  Eel.json  FabPlugin_5_3.json  Fortnite.json  QuixelBridge_5_0.json  UE_5_0.json  UE_5_1.json  UE_5_2.json  UE_5_3.json  UE_5_4.json  UE_5_5.json  UE_5_6.json  UE_5_7.json  UE_5_8.json
FEX/CompetitorAnalysis/gamehub/: game_container_store.json
FEX/CompetitorAnalysis/gamehub/game-library/: local_e0498f7e-5efb-462e-a049-019ebedd5351-0f3752e3.json  local_e8d1d17c-985c-4267-a8d1-019ebee7c8ad-d0c7b611.json
FEX/CompetitorAnalysis/sync/.lc/Dq/: .DqMzn6iXiR0Sjaef
FEX/CompetitorAnalysis/sync/.lr/pW/: .pWBZ9w0Md6BgH7nF
FEX/CompetitorAnalysis/sync/.ls/Pk/: .PkN_MnMqpwZo-bYF
FEX/CompetitorAnalysis/sync/.lx/BZ/: .BZB-NSvPg82qO5ZW
FEX/Data/CI/: D3DThunks.json
FEX/Data/CMake/: LinkerGC.cmake
FEX/FEXCore/: Readme.md
FEX/FEXCore/Scripts/: json_ir_generator.py
FEX/FEXCore/Source/: CMakeLists.txt
FEX/FEXCore/Source/Interface/Config/: Config.cpp
FEX/FEXCore/Source/Interface/Context/: Context.cpp  Context.h
FEX/FEXCore/Source/Interface/Core/: Addressing.cpp  Addressing.h  CPUBackend.cpp  CPUID.cpp  Core.cpp  FEXLibrary.cpp  Frontend.cpp  LookupCache.cpp  OpcodeDispatcher.cpp  OpcodeDispatcher.h
FEX/FEXCore/Source/Interface/Core/ArchHelpers/: Arm64Emitter.cpp
FEX/FEXCore/Source/Interface/Core/Dispatcher/: Dispatcher.cpp  Dispatcher.h
FEX/FEXCore/Source/Interface/Core/JIT/: Arm64Relocations.cpp  AtomicOps.cpp  BranchOps.cpp  JIT.cpp  JITClass.h  MemoryOps.cpp  (+1 more)
FEX/FEXCore/Source/Interface/IR/: PassManager.cpp
FEX/FEXCore/Source/Utils/: Allocator.cpp  AllocatorHooks.cpp  CPUInfo.cpp  DebugSessionLog.cpp  ForcedAssert.cpp  HostFeatures.cpp  LogManager.cpp  LongJump.cpp  Profiler.cpp  SpinWaitLock.cpp
FEX/FEXCore/Source/Utils/Allocator/: 64BitAllocator.cpp
FEX/FEXCore/Source/Utils/ArchHelpers/: Arm64.cpp
FEX/FEXCore/include/: git_version.h.in
FEX/FEXCore/include/FEXCore/Core/: Context.h  FEXLibrary.h
FEX/FEXCore/include/FEXCore/Utils/: AllocatorHooks.h  DebugSessionLog.h  InterruptableConditionVariable.h  LogManager.h  PrctlUtils.h  SHMStats.h  SignalScopeGuards.h  SpinWaitLock.h  ThreadPoolAllocator.h  TypeDefines.h  WritePriorityMutex.h
FEX/FEXCore/include/FEXCore/fextl/: functional.h  memory.h
FEX/FEXCore/unittests/Emitter/: TestDisassembler.h
FEX/FEXHeaderUtils/: CMakeLists.txt
FEX/FEXHeaderUtils/FEXHeaderUtils/: Filesystem.h  Syscalls.h  fex_elf.h
FEX/FEXHeaderUtils/FEXHeaderUtils/asm/: ipcbuf.h  msgbuf.h  posix_types.h  sembuf.h  shmbuf.h
FEX/FEXHeaderUtils/FEXHeaderUtils/linux/: aio_abi.h  audit.h  bpf_common.h  const.h  fcntl.h  filter.h  futex.h  input.h  ipc.h  joystick.h  magic.h  memfd.h  mman.h  mqueue.h  msg.h  openat2.h  personality.h  ptrace.h  sched.h  seccomp.h  sem.h  shm.h  socket.h  sockios.h  termios.h  types.h  usbdevice_fs.h  utsname.h  videodev2.h  wireless.h
FEX/FEXHeaderUtils/FEXHeaderUtils/sys/: auxv.h  epoll.h  fsuid.h  statfs.h  sysinfo.h  timex.h
FEX/Scripts/: NeedDisabledSVE.py  aarch64_fit_native.py
FEX/Source/: CMakeLists.txt
FEX/Source/Common/: Async.h  AsyncNet.h  CMakeLists.txt  Config.cpp  FDUtils.h  FileMappingBaseAddress.h
FEX/Source/Common/Linux/: SBRKAllocations.h
FEX/Source/Common/cpp-optparse/: OptionParser.cpp
FEX/Source/Tools/: CMakeLists.txt
FEX/Source/Tools/CodeSizeValidation/: Main.cpp
FEX/Source/Tools/CommonTools/: PortabilityInfo.h
FEX/Source/Tools/FEXGetConfig/: Main.cpp
FEX/Source/Tools/FEXInterpreter_macOS/: CMakeLists.txt  FEXInterpreter_macOS.cpp  FEXInterpreter_macOS.cpp.orig
FEX/Source/Tools/FEXLauncher/: FEXLauncher.swift
FEX/Source/Tools/FEXMacOS/: CMakeLists.txt  Main.mm
FEX/Source/Tools/MacOSEmulation/: CMakeLists.txt  ELFLoader.h  MacOSSyscalls.cpp  MacOSSyscalls.cpp.patch  MacOSSyscalls.h  MachException.cpp  MachException.h  MachOLoader.cpp  MachOLoader.h  MetalBridge.h  MetalBridge.mm  Metal_D3D11.h  Metal_D3D11.mm  PELoader.cpp  PELoader.h  RegistryEmulator.cpp  RegistryEmulator.h  VFSEmulator.cpp  VFSEmulator.h
FEX/docs/: SourceOutline.md
FEX/unittests/: modify_asm.py
FEX/unittests/32Bit_ASM/: CMakeLists.txt
FEX/unittests/ASM/: CMakeLists.txt
FEX/unittests/ThunkLibs/: generator.cpp
src/: CMakeLists.txt  main.c  main.h
src/core/: CMakeLists.txt  handle.c  moltenvk_loader.c  registry.c  registry.h  thread.c  vfs.c
src/emu/: CMakeLists.txt  emu.c  emu.cpp
src/loader/: CMakeLists.txt  pe_loader.c  pe_parser.c
src/thunk/: CMakeLists.txt  dispatch.c  thunk.c
src/win32/: CMakeLists.txt  advapi32.c  advapi32.h  cocoa_bridge.m  cocoa_window.h  cocoa_window.m  d3d9.c  d3d9.json  fexi_d3d9.c  fexi_gdi32.c  fexi_kernel32.c  fexi_ntdll.c  fexi_user32.c  gdi32.c  gdi32.h  gdi32.json  kernel32.c  kernel32.h  kernel32.json  metal_renderer.m  ntdll.c  ntdll.h  ntdll.json  sync.c  timer.c  timer.h  user32.c  user32.h  user32.json  vulkan-1.c  vulkan_thunks_gen.inc
tests/: CMakeLists.txt  advanced_gui_test.c  advanced_win32.c  create_test_pe  create_test_pe.c  d3d9_test.c  fs_win32.c  gdi_test.c  gui_win32.c  hello_gui.c  hello_win32.c  input_test.c  mem_test.c  registry_test.c  sync_test.c  test_emu_basic.c  test_pe_emu.c  test_pe_parser.c  test_thunk_dispatch.c  thread_test.c  user32_test.c  vfs_test.c  vulkan_test.c
(+25 files in other folders)
